--- a/index.html
+++ b/index.html
@@ -6,10 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rotten Pineapple</title>
     <link rel="stylesheet" href="assets/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <style>
+    </style>
 </head>
 
 <body>
-
+    <!-- navbar css native -->
+    <nav>
+        <div class="logo">
+            <img src="assets/img/logo.png" alt="">
+            <h4>Rotten <span>Pineapple</span></h4>
+        </div>
+        <!-- search bar button on inside -->
+        <div class="search-bar">
+            <input type="text" placeholder="Search Movies, Anime, Series....">
+            <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+        <ul class="nav-links">
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="movies.html">Movies</a></li>
+            <li><a href="tvshows.html">TV Shows</a></li>
+            <li><a href="actors.html">Actors</a></li>
+        </ul>
+    </nav>
 </body>
 
 </html>
+<script src="https://kit.fontawesome.com/984a8c9bbd.js" crossorigin="anonymous"></script>
