add : Container Judul

--- a/index.html
+++ b/index.html
@@ -6,30 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rotten Pineapple</title>
     <link rel="stylesheet" href="assets/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
     <style>
+
     </style>
 </head>
 
 <body>
-    <!-- navbar css native -->
     <nav>
         <div class="logo">
             <img src="assets/img/logo.png" alt="">
-            <h4>Rotten <span>Pineapple</span></h4>
+            <a href="index.html">
+                <h4>Rotten <span>Pineapple</span></h4>
+            </a>
         </div>
-        <!-- search bar button on inside -->
         <div class="search-bar">
             <input type="text" placeholder="Search Movies, Anime, Series....">
             <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         <ul class="nav-links">
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="movies.html">Movies</a></li>
-            <li><a href="tvshows.html">TV Shows</a></li>
-            <li><a href="actors.html">Actors</a></li>
+            <li><a href="" class="active">Home</a></li>
+            <li><a href="">Movies</a></li>
+            <li><a href="">TV Series</a></li>
+            <li><a href="">Actors</a></li>
         </ul>
     </nav>
+    <div class="container-header">
+        <div class="content-left">
+            <h1>Watch Movies, TV Series and Anime</h1>
+            <p>Watch movies, TV Series, Anime and more on Rotten Pineapple.</p>
+            <button class="btn">Let's Explore <i class="fa-solid fa-rocket" style="color: #ffffff;"></i></button>
+        </div>
+        <div class="content-right">
+            <h1>Peaky Blinders</h1>
+            <span>TV Series - </span>
+            <q>Britain is a mixture of despair and hedonism in 1919 in the aftermath of the Great War. Returning
+                soldiers, newly minted revolutions and criminal gangs are fighting for survival in a nation rocked by
+                economic upheaval. One of the most powerful gangs of the time is the Peaky Blinders, run by returning
+                war hero Thomas Shelby and his family. But Thomas has bigger ambitions than just running the streets.
+                When a crate of guns goes missing, he recognizes an opportunity to advance in the world because crime
+                may pay but legitimate business pays better. Trying to rid Britain of its crime is Inspector Chester
+                Campbell, who arrives from Belfast to try to achieve that goal.</q>
+        </div>
+    </div>
 </body>
 
 </html>
