--- a/index.html
+++ b/index.html
@@ -10,48 +10,258 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
     <style>
-
     </style>
 </head>
 
 <body>
-    <nav>
-        <div class="logo">
-            <img src="assets/img/logo.png" alt="">
-            <a href="index.html">
-                <h4>Rotten <span>Pineapple</span></h4>
-            </a>
-        </div>
-        <div class="search-bar">
-            <input type="text" placeholder="Search Movies, Anime, Series....">
-            <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-        </div>
-        <ul class="nav-links">
-            <li><a href="" class="active">Home</a></li>
-            <li><a href="">Movies</a></li>
-            <li><a href="">TV Series</a></li>
-            <li><a href="">Actors</a></li>
-        </ul>
-    </nav>
-    <div class="container-header">
-        <div class="content-left">
-            <h1>Watch Movies, TV Series and Anime</h1>
-            <p>Watch movies, TV Series, Anime and more on Rotten Pineapple.</p>
-            <button class="btn">Let's Explore <i class="fa-solid fa-rocket" style="color: #ffffff;"></i></button>
-        </div>
-        <div class="content-right">
-            <h1>Peaky Blinders</h1>
-            <span>TV Series - </span>
-            <q>Britain is a mixture of despair and hedonism in 1919 in the aftermath of the Great War. Returning
-                soldiers, newly minted revolutions and criminal gangs are fighting for survival in a nation rocked by
-                economic upheaval. One of the most powerful gangs of the time is the Peaky Blinders, run by returning
-                war hero Thomas Shelby and his family. But Thomas has bigger ambitions than just running the streets.
-                When a crate of guns goes missing, he recognizes an opportunity to advance in the world because crime
-                may pay but legitimate business pays better. Trying to rid Britain of its crime is Inspector Chester
-                Campbell, who arrives from Belfast to try to achieve that goal.</q>
-        </div>
-    </div>
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="assets/img/logo.png" alt="">
+                <a href="index.html">
+                    <h4>Rotten <span>Pineapple</span></h4>
+                </a>
+            </div>
+            <div class="search-bar">
+                <input type="text" placeholder="Search Movies, Anime, Series....">
+                <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </div>
+            <ul class="nav-links">
+                <li><a href="" class="active">Home</a></li>
+                <li><a href="">Movies</a></li>
+                <li><a href="">TV Series</a></li>
+                <li><a href="">Actors</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article class="container-header">
+            <section class="content-left">
+                <h1>Review Movies, TV Series and Anime</h1>
+                <p>Review movies, TV Series, Anime and more on Rotten Pineapple.</p>
+                <a href="#jelajah"><button class="btn">Let's Explore <i class="fa-solid fa-rocket"
+                            style="color: #ffffff;"></i></button></a>
+            </section>
+            <section class="content-right">
+                <h1>Peaky Blinders</h1>
+                <span>TV Series - </span>
+                <q>Britain is a mixture of despair and hedonism in 1919 in the aftermath of the Great War. Returning
+                    soldiers, newly minted revolutions and criminal gangs are fighting for survival in a nation rocked
+                    by
+                    economic upheaval. One of the most powerful gangs of the time is the Peaky Blinders, run by
+                    returning
+                    war hero Thomas Shelby and his family. But Thomas has bigger ambitions than just running the
+                    streets.
+                    When a crate of guns goes missing, he recognizes an opportunity to advance in the world because
+                    crime
+                    may pay but legitimate business pays better. Trying to rid Britain of its crime is Inspector Chester
+                    Campbell, who arrives from Belfast to try to achieve that goal.</q>
+            </section>
+        </article>
+        <article class="container" id="jelajah">
+            <section class="judul">
+                <h3><img src="assets/img/favicon.ico" alt="">MOST VIEWED ON ANY PLATFORM</h3>
+                <h4>View All</h4>
+            </section>
+            <hr class="garis-bawah-judul">
+            <section class="container-card">
+                <section class="card">
+                    <section class="img">
+                        <img src="assets/img/1.jpg" alt="I Am Groot">
+                    </section>
+                    <section class="content">
+                        <section class="title">
+                            <h3>I Am Groot</h3>
+                            <span>TV Series</span>
+                        </section>
+                        <section class="desc">
+                            <span>Published on: </span><q>Disney+</q>
+                        </section>
+                        <section class="button">
+                            <button>Read more <i class="fa-solid fa-magnifying-glass"
+                                    style="color: #ffffff;"></i></button>
+                        </section>
+                    </section>
+                </section>
+                <section class="card">
+                    <section class="img">
+                        <img src="assets/img/2.jpg" alt="Loki - Season 1">
+                    </section>
+                    <section class="content">
+                        <section class="title">
+                            <h3>Loki - Season 1</h3>
+                            <span>TV Series</span>
+                        </section>
+                        <section class="desc">
+                            <span>Published on: </span><q>Disney+</q>
+                        </section>
+                        <section class="button">
+                            <button>Read more <i class="fa-solid fa-magnifying-glass"
+                                    style="color: #ffffff;"></i></button>
+                        </section>
+                    </section>
+                </section>
+                <section class="card">
+                    <section class="img">
+                        <img src="assets/img/3.jpg" alt="Avengers - Endgame">
+                    </section>
+                    <section class="content">
+                        <section class="title">
+                            <h3>Avengers - Endgame</h3>
+                            <span>Movies</span>
+                        </section>
+                        <section class="desc">
+                            <span>Published on: </span><q>Disney+</q>
+                        </section>
+                        <section class="button">
+                            <button>Read more <i class="fa-solid fa-magnifying-glass"
+                                    style="color: #ffffff;"></i></button>
+                        </section>
+                    </section>
+                </section>
+                <section class="card">
+                    <section class="img">
+                        <img src="assets/img/4.jpg" alt="Peaky Blinders">
+                    </section>
+                    <section class="content">
+                        <section class="title">
+                            <h3>Peaky Blinders</h3>
+                            <span>TV Series</span>
+                        </section>
+                        <section class="desc">
+                            <span>Published on: </span><q>Netflix</q>
+                        </section>
+                        <section class="button">
+                            <button>Read more <i class="fa-solid fa-magnifying-glass"
+                                    style="color: #ffffff;"></i></button>
+                        </section>
+                    </section>
+                </section>
+                <section class="card">
+                    <section class="img">
+                        <img src="assets/img/5.jpg" alt="Arcane">
+                    </section>
+                    <section class="content">
+                        <section class="title">
+                            <h3>Arcane</h3>
+                            <span>TV Series</span>
+                        </section>
+                        <section class="desc">
+                            <span>Published on: </span><q>Netflix</q>
+                        </section>
+                        <section class="button">
+                            <button>Read more <i class="fa-solid fa-magnifying-glass"
+                                    style="color: #ffffff;"></i></button>
+                        </section>
+                    </section>
+                </section>
+                <section class="card">
+                    <section class="img">
+                        <img src="assets/img/6.jpg" alt="">
+                    </section>
+                    <section class="content">
+                        <section class="title">
+                            <h3>Attack on Titan S3</h3>
+                            <span>Anime</span>
+                        </section>
+                        <section class="desc">
+                            <span>Published on: </span><q>-</q>
+                        </section>
+                        <section class="button">
+                            <button>Read more <i class="fa-solid fa-magnifying-glass"
+                                    style="color: #ffffff;"></i></button>
+                        </section>
+                    </section>
+                </section>
+                <section class="card">
+                    <section class="img">
+                        <img src="assets/img/7.jpg" alt="">
+                    </section>
+                    <section class="content">
+                        <section class="title">
+                            <h3>Avatar 2 - The Way of Water</h3>
+                            <span>Movies</span>
+                        </section>
+                        <section class="desc">
+                            <span>Published on: </span><q>-</q>
+                        </section>
+                        <section class="button">
+                            <button>Read more <i class="fa-solid fa-magnifying-glass"
+                                    style="color: #ffffff;"></i></button>
+                        </section>
+                    </section>
+                </section>
+                <section class="card">
+                    <section class="img">
+                        <img src="assets/img/8.jpg" alt="">
+                    </section>
+                    <section class="content">
+                        <section class="title">
+                            <h3>Oppenheimer</h3>
+                            <span>Movies</span>
+                        </section>
+                        <section class="desc">
+                            <span>Published on: </span><q>-</q>
+                        </section>
+                        <section class="button">
+                            <button>Read more <i class="fa-solid fa-magnifying-glass"
+                                    style="color: #ffffff;"></i></button>
+                        </section>
+                    </section>
+                </section>
+            </section>
+        </article>
+        <!-- About us with aside on right -->
+        <aside class="container" id="about">
+            <section class="about-us">
+                <section class="judul">
+                    <h3><img src="assets/img/favicon.ico" alt="">ABOUT US</h3>
+                </section>
+                <hr class="garis-bawah-judul">
+                <section class="container-about">
+                    <section class="content-aboutus-left">
+                        <h1>What is Rotten Pineapple?</h1>
+                        <p>Rotten Pineapple is a website that provides reviews of movies, TV Series, Anime and more. We
+                            provide
+                            reviews of movies, TV Series, Anime and more from various platforms such as Netflix,
+                            Disney+,
+                            HBO
+                            Max, Amazon Prime Video, Hulu, Crunchyroll, and more.</p>
+                    </section>
+                    <section class="content-aboutus-right">
+                        <h1>About me</h1>
+                        <img src="assets/img/profile.png" alt="">
+                        <h2>Ramandhika Ilham Pratama</h2>
+                        <h4>Web Developer</h4>
+                        <section class="sosmed">
+                            <a href="https://www.instagram.com/ramandhika.ip/"><i
+                                    class="fab fa-instagram">&nbsp;@ramandhika.ip</i></a>
+                            <a href="https://github.com/ramandhika"><i
+                                    class="fab fa-github">&nbsp;github.com/ramandhika</i></a>
+                        </section>
+                        <hr width="100%">
+                        <section class="data-diri">
+                            <h5>Email :</h5>
+                            <p>ramandhika.ilham@gmail.com</p>
+                            <hr>
+                            <h5>Hobby :</h5>
+                            <p>Bermain Game, Mencoba hal baru</p>
+                            <hr>
+                        </section>
+                    </section>
+                </section>
+            </section>
+        </aside>
+
+
+        <footer>
+            <section class="footer-bottom">
+                <p>&copy; 2023 Rotten Pineapple. All Rights Reserved.</p>
+            </section>
+        </footer>
+    </main>
 </body>
 
 </html>
+<script src="assets/script.js"></script>
 <script src="https://kit.fontawesome.com/984a8c9bbd.js" crossorigin="anonymous"></script>
