penambahan section actor

--- a/index.html
+++ b/index.html
@@ -10,31 +10,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
     <style>
+
     </style>
 </head>
 
 <body>
     <header>
         <nav>
-            <div class="logo">
-                <img src="assets/img/logo.png" alt="">
+            <section class="logo">
+                <img src="assets/img/logo.png" alt="Logo">
                 <a href="index.html">
                     <h4>Rotten <span>Pineapple</span></h4>
                 </a>
-            </div>
-            <div class="search-bar">
+            </section>
+            <section class="search-bar">
                 <input type="text" placeholder="Search Movies, Anime, Series....">
                 <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-            </div>
+            </section>
             <ul class="nav-links">
                 <li><a href="" class="active">Home</a></li>
-                <li><a href="">Movies</a></li>
+                <li><a href="#jelajah">Movies</a></li>
                 <li><a href="">TV Series</a></li>
                 <li><a href="">Actors</a></li>
             </ul>
         </nav>
     </header>
     <main>
+        <!-- Home Section -->
         <article class="container-header">
             <section class="content-left">
                 <h1>Review Movies, TV Series and Anime</h1>
@@ -58,6 +60,7 @@
                     Campbell, who arrives from Belfast to try to achieve that goal.</q>
             </section>
         </article>
+        <!-- Film Section -->
         <article class="container" id="jelajah">
             <section class="judul">
                 <h3><img src="assets/img/favicon.ico" alt="">MOST VIEWED ON ANY PLATFORM</h3>
@@ -75,7 +78,7 @@
                             <span>TV Series</span>
                         </section>
                         <section class="desc">
-                            <span>Published on: </span><q>Disney+</q>
+                            <span>Published on: <q>Disney+</q></span>
                         </section>
                         <section class="button">
                             <button>Read more <i class="fa-solid fa-magnifying-glass"
@@ -211,7 +214,107 @@
                 </section>
             </section>
         </article>
-        <!-- About us with aside on right -->
+        <!-- Actor Section -->
+        <article class="container" id="actor">
+            <section class="judul">
+                <h3><img src="assets/img/favicon.ico" alt="">CELEBRITIES (Actors)</h3>
+                <h4>View All</h4>
+            </section>
+            <hr class="garis-bawah-judul">
+            <section class="container-actor">
+                <section class="card-actor">
+                    <section class="img-actor">
+                        <img src="assets/img/Actor/Cillian-Murphy.jpg" alt="">
+                    </section>
+                    <section class="content-actor">
+                        <section class="title-actor">
+                            <h3>Cillian Murphy</h3>
+                            <span>Actor</span>
+                        </section>
+                        <section class="desc-actor">
+                            <span>Birthday: </span><q>May 25, 1976</q><br>
+                            <span>Birthplace: </span><q>Douglas, Cork, Ireland</q><br>
+                            <span>Desc : </span><q>After cutting his teeth creatively as an amateur musician and later
+                                dropping out of law school, Irish-born Cillian Murphy segued into acting with an
+                                attention-grabbing performance in the stark, two-character stage drama "Disco Pigs."</q>
+                        </section>
+                        <section class="button-actor">
+                            <button>Read more <i class="fa-solid fa-magnifying-glass"
+                                    style="color: #ffffff;"></i></button>
+                        </section>
+                    </section>
+                </section>
+                <section class="card-actor">
+                    <section class="img-actor">
+                        <img src="assets/img/Actor/Robert Downey Jr.jpg" alt="">
+                    </section>
+                    <section class="content-actor">
+                        <section class="title-actor">
+                            <h3>Robert Downey Jr</h3>
+                            <span>Actor</span>
+                        </section>
+                        <section class="desc-actor">
+                            <span>Birthday: </span><q>Apr 4, 1965</q><br>
+                            <span>Birthplace: </span><q>Manhattan, New York, USA</q><br>
+                            <span>Desc : </span><q>Despite Oscar and Golden Globe nominations and the unshakeable
+                                respect of film critics and his acting peers, Robert Downey, Jr. insisted that he was
+                                not really an actor, just a good hustler who had found a way to make a living."</q>
+                        </section>
+                        <section class="button-actor">
+                            <button>Read more <i class="fa-solid fa-magnifying-glass"
+                                    style="color: #ffffff;"></i></button>
+                        </section>
+                    </section>
+                </section>
+                <section class="card-actor">
+                    <section class="img-actor">
+                        <img src="assets/img/Actor/Leonardo-Dicaprio.jpg" alt="">
+                    </section>
+                    <section class="content-actor">
+                        <section class="title-actor">
+                            <h3>Leonardo DiCaprio</h3>
+                            <span>Actor</span>
+                        </section>
+                        <section class="desc-actor">
+                            <span>Birthday: </span><q>Nov 11, 1974</q><br>
+                            <span>Birthplace: </span><q>Hollywood, California, USA</q><br>
+                            <span>Desc : </span><q>Child actor Leonardo DiCaprio was quite possibly one of the most
+                                successful to fully transition into a career as an adult. Born in Los Angeles,
+                                California in 1974, DiCaprio began acting as a small child, appearing in
+                                commercials.</q>
+                        </section>
+                        <section class="button-actor">
+                            <button>Read more <i class="fa-solid fa-magnifying-glass"
+                                    style="color: #ffffff;"></i></button>
+                        </section>
+                    </section>
+                </section>
+                <section class="card-actor">
+                    <section class="img-actor">
+                        <img src="assets/img/Actor/Elizabeth Olsen.jpg" alt="">
+                    </section>
+                    <section class="content-actor">
+                        <section class="title-actor">
+                            <h3>Elizabeth Olsen</h3>
+                            <span>Actor</span>
+                        </section>
+                        <section class="desc-actor">
+                            <span>Birthday: </span><q>Feb 16, 1989</q><br>
+                            <span>Birthplace: </span><q>Sherman Oaks, California, USA</q><br>
+                            <span>Desc : </span><q>Elizabeth Olsen was an American actress who was best known for her
+                                critically-acclaimed dramatic performance in 2011's "Martha Marcy May Marlene," as well
+                                as for playing Wanda Maximoff/Scarlet Witch in a series of films set in the Marvel
+                                Cinematic Universe, including 2019's "Avengers: Endgame."</q>
+                        </section>
+                        <section class="button-actor">
+                            <button>Read more <i class="fa-solid fa-magnifying-glass"
+                                    style="color: #ffffff;"></i></button>
+                        </section>
+                    </section>
+                </section>
+            </section>
+        </article>
+        <!-- About Section -->
         <aside class="container" id="about">
             <section class="about-us">
                 <section class="judul">
@@ -235,14 +338,14 @@
                         <h4>Web Developer</h4>
                         <section class="sosmed">
                             <a href="https://www.instagram.com/ramandhika.ip/"><i
-                                    class="fab fa-instagram">&nbsp;@ramandhika.ip</i></a>
+                                    class="fab fa-instagram"></i>&nbsp;@ramandhika.ip</a>
                             <a href="https://github.com/ramandhika"><i
-                                    class="fab fa-github">&nbsp;github.com/ramandhika</i></a>
+                                    class="fab fa-github"></i>&nbsp;github.com/ramandhika</a>
                         </section>
                         <hr width="100%">
                         <section class="data-diri">
                             <h5>Email :</h5>
-                            <p>ramandhika.ilham@gmail.com</p>
+                            <span>ramandhika.ilham@gmail.com</span>
                             <hr>
                             <h5>Hobby :</h5>
                             <p>Bermain Game, Mencoba hal baru</p>
@@ -256,7 +359,9 @@
 
         <footer>
             <section class="footer-bottom">
-                <p>&copy; 2023 Rotten Pineapple. All Rights Reserved.</p>
+                <p>&copy; 2023 Rotten Pineapple. All Rights Reserved. <i
+                        class="fab fa-github"></i>&nbsp;github.com/ramandhika
+                </p>
             </section>
         </footer>
     </main>
