--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <title>Rotten Pineapple</title>
     <link rel="stylesheet" href="assets/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
-    <style>
-
-    </style>
 </head>
 
 <body>
@@ -28,11 +24,24 @@
                 <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
             </section>
             <ul class="nav-links">
-                <li><a href="" class="active">Home</a></li>
-                <li><a href="#jelajah">Movies</a></li>
-                <li><a href="">TV Series</a></li>
-                <li><a href="">Actors</a></li>
+                <li class="nav-item">
+                    <a href="index.html" class="nav-menu active">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#jelajah" class="nav-menu">Movies</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#jelajah" class="nav-menu">TV Series</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#actor" class="nav-menu">Actors</a>
+                </li>
             </ul>
+            <section class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </section>
         </nav>
     </header>
     <main>
@@ -217,7 +226,7 @@
         <!-- Actor Section -->
         <article class="container" id="actor">
             <section class="judul">
-                <h3><img src="assets/img/favicon.ico" alt="">CELEBRITIES (Actors)</h3>
+                <h3><img src="assets/img/favicon.ico" alt="">CELEBRITIES ( ACTORS )</h3>
                 <h4>View All</h4>
             </section>
             <hr class="garis-bawah-judul">
@@ -355,17 +364,16 @@
                 </section>
             </section>
         </aside>
-
-
-        <footer>
-            <section class="footer-bottom">
-                <p>&copy; 2023 Rotten Pineapple. All Rights Reserved. <i
-                        class="fab fa-github"></i>&nbsp;github.com/ramandhika
-                </p>
-            </section>
-        </footer>
     </main>
+    <footer>
+        <section class="footer-bottom">
+            <p>&copy; 2023 Rotten Pineapple. All Rights Reserved. <i
+                    class="fab fa-github"></i>&nbsp;github.com/ramandhika
+            </p>
+        </section>
+    </footer>
 </body>
 
 </html>
+<script src="assets/script.js"></script>
 <script src="https://kit.fontawesome.com/984a8c9bbd.js" crossorigin="anonymous"></script>
